# tensoreval-sdk

./: .gitignore  INTEGRATION.md  README.md  REPORT.md  customer_support_results.json  pyproject.toml  test_results.json
examples/: REPORT.md  customer_support_eval.py  debug_judge.py  eval_support_agent.py  final_verification.py  gsm8k_env.py  quickstart.py  run_customer_support.py  test_complex_docker.py  test_docker.py  test_docker_flow.py  test_docker_python.py  test_env_flow.py  test_llm_grading.py  test_mimo_speech.py  test_rubric_flow.py  verify_flow.py  voice_eval_mimo.py  voice_eval_scenario.py
examples/scenarios/: code_generation.jsonl  customer_support.jsonl  data_analysis.jsonl  tasks.jsonl  test_code_gen.py
examples/scripts/: analyze_customer_support_results.py  example_all_features.py  test_customer_support_improved_prompt.py  test_docker_agent.py  test_docker_compose.py
examples/user_agent/: agent.py  compose.yaml  eval.py  mcp_server.py  test_cases.jsonl
tensoreval/: __init__.py  auto_generate.py  client.py  comparison.py  datasets.py  docker_compose.py  enums.py  env.py  environments.py  evaluation.py  grader.py  mcp_tools.py  observability.py  types.py  verified_evaluator.py  verifiers_integration.py
tensoreval/agents/: __init__.py
tensoreval/cli/: __init__.py  __main__.py  deploy.py  eval.py  init.py  rich_output.py  train.py
tensoreval/core/: __init__.py  decorators.py  errors.py  sample.py  score.py  types.py
tensoreval/deploy/: __init__.py  deployer.py
tensoreval/envs/: __init__.py  environment.py  sandbox_env.py  (+4 more)
tests/: test_sdk.py
(+34 files in other folders)
