[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tensoreval"
version = "0.1.0"
description = "TensorEval — Evaluation, Training, and Deployment SDK for AI Agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "rich>=13.0",
    "typer>=0.12",
    "httpx>=0.27",
    "tqdm>=4.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
litellm = ["litellm>=1.0"]
datasets = ["datasets>=2.0"]
tinker = ["tinker>=0.22.0"]
verifiers = ["verifiers>=0.1.14"]
all = ["tensoreval[anthropic,litellm,datasets,tinker,verifiers]"]

[project.scripts]
tensoreval = "tensoreval.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tensoreval"]
