[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tensoreval"
version = "0.6.0"
description = "TensorEval — Evaluation SDK for AI Agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "httpx>=0.27",
    "nest_asyncio>=1.6",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
datasets = ["datasets>=2.0"]
all = ["tensoreval[anthropic,datasets]"]

[tool.hatch.build.targets.wheel]
packages = ["tensoreval"]
